# ModelForge

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
examples/: .gitkeep  config_example.yaml  docker-compose.yml  gemma.yaml
modelforge/: __init__.py  cli.py
modelforge/backends/: __init__.py  base.py  factory.py  huggingface.py
modelforge/config/: __init__.py  loader.py  schema.py  security.py
modelforge/core/: __init__.py  checkpoint.py  evaluator.py  inference.py  trainer.py
modelforge/export/: __init__.py  api.py  docker.py  exporter.py
modelforge/infrastructure/: __init__.py  base.py  cloud.py  colab.py  container.py  factory.py
modelforge/templates/: Dockerfile  config.yaml
modelforge/utils/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py  test_backends.py  test_cli.py  test_config.py  test_trainer.py
